til-by-topic/kubernetes/3.Kubernetes와-Docker로-한-번에-끝내는-컨테이너-기반-MSA/ch13/ingress-multiple-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snackbar
  namespace: snackbar
  labels:
    project: snackbar
spec:
  defaultBackend:
    service:
      name: home
      port: 
        number: 80
  rules:
  - host: order.fast-snackbar.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: order
            port: 
              number: 80
  - host: payment.fast-snackbar.com
    http: 
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: payment
            port:
              number: 80
  - host: delivery.fast-snackbar.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: delivery 
            port:
              number: 80
